docker support added for backend .net api. ci-cd testing to create nd store image as package

--- a/backend/genai.backend.api/appsettings.json
+++ b/backend/genai.backend.api/appsettings.json
@@ -5,17 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "CorsAllowedHosts": "",
-  "AzureOpenAI": {
-    "GPTDeployName": "",
-    "GPTModelName": "",
-    "EmbedtDeployName": "",
-    "EmbedModelName": "",
-    "Endpoint": "",
-    "ApiKey": ""
+  "DefaultModelId": "",
+  "CorsAllowedHosts": "http://localhost:3000;",
+  "Jwt": {
+    "SecretKey": "" //openssl rand -base64 32
+  },
+  "RateLimits": {
+    "admin": ,
+    "pro": ,
+    "student": ,
+    "user": 
+  },
+  "Prompt": "You are Eva",
+  "Bing": {
+    "Key": "",
+    "Endpoint": "https://api.bing.microsoft.com/v7.0/search"
   },
   "ConnectionStrings": {
-    "OracleDb": ""
+    "OracleDb": "",
+    "Redis": ""
+  },
+  "Cassandra": {
+    "Host": "",
+    "Port": ,
+    "Keyspace": ""
   }
+
 }
