--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           context: ./backend/genai.backend.api
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: |
             ghcr.io/${{ github.actor }}/eva-backend:latest
       
