Feature: rendering Math Equation is now supported with react-katex. Changes- Login page enhanced

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/katex": "^0.16.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
@@ -33,7 +34,8 @@
     "google-auth-library": "^8.9.0",
     "ioredis": "^5.4.1",
     "jwt-decode": "^4.0.0",
-    "langchain": "^0.1.37",
+    "katex": "^0.16.21",
+    "langchain": "^0.3.15",
     "lucide-react": "^0.435.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.23",
@@ -43,22 +45,25 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.26.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "react-transition-group": "^4.4.5",
     "redis": "^4.7.0",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "vfile": "^6.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-katex": "^3.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-transition-group": "^4.4.11",
     "@typescript-eslint/parser": "^6.21.0",
