--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.26.2",
     "react-syntax-highlighter": "^15.5.0",
