--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.0",
