--- a/.github/workflows/fastapi-backend.yaml
+++ b/.github/workflows/fastapi-backend.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # Fetch only the latest commit to speed up checkout
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -34,7 +36,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.actor }}/fastapi-backend:latest
-      
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/fastapi-backend:latest # Enable caching
+          cache-to: type=inline # Inline caching for faster builds
+
       - name: Remove old images
         uses: snok/container-retention-policy@v3.0.0
         with:
