--- a/backend/genai.backend.fastapi/Dockerfile
+++ b/backend/genai.backend.fastapi/Dockerfile
@@ -4,11 +4,14 @@ FROM python:3.13.3-slim
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy only requirements.txt first to leverage Docker layer caching
+COPY requirements.txt /app/
 
-# Install any needed packages specified in requirements.txt
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application code
+COPY . /app
 
 # Make the startup script executable
 RUN chmod +x /app/start.sh
