--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "flowbite": "^2.5.1",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.18.0",
+    "geist": "^1.4.2",
     "google-auth-library": "^8.9.0",
     "ioredis": "^5.4.1",
     "jwt-decode": "^4.0.0",
