Database Changed: Cassandra to Postgres [asyncpg and SQLalchemy]

--- a/backend/genai.backend.fastapi/requirements.txt
+++ b/backend/genai.backend.fastapi/requirements.txt
@@ -9,7 +9,8 @@ Levenshtein
 pydantic-settings
 pydantic[email]
 pyjwt
-scylla-driver
+asyncpg
+sqlalchemy[asyncio]
 uvicorn[standard]
 websockets
 apscheduler
