admin dashboard api integration

--- a/backend/genai.backend.fastapi/requirements.txt
+++ b/backend/genai.backend.fastapi/requirements.txt
@@ -9,7 +9,7 @@ langchain-community
 Levenshtein
 pydantic-settings
 pydantic[email]
-pyjwt
+python-jose
 asyncpg
 sqlalchemy[asyncio]
 uvicorn[standard]
