document processing changes, frontend auth fixes

--- a/backend/genai.backend.fastapi/Dockerfile
+++ b/backend/genai.backend.fastapi/Dockerfile
@@ -4,10 +4,22 @@ FROM python:3.13.3-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install system dependencies required by LangChain document loaders
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    gcc \
+    g++ \
+    libmagic-dev \
+    libpoppler-cpp-dev \
+    poppler-utils \
+    tesseract-ocr \
+    qpdf \
+ && rm -rf /var/lib/apt/lists/*
+
 # Copy only requirements.txt first to leverage Docker layer caching
 COPY requirements.txt /app/
 
-# Install dependencies
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
