--- a/backend/genai.backend.fastapi/Dockerfile
+++ b/backend/genai.backend.fastapi/Dockerfile
@@ -5,16 +5,16 @@ FROM python:3.13.3-slim
 WORKDIR /app
 
 # Install system dependencies required by LangChain document loaders
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    gcc \
-    g++ \
-    libmagic-dev \
-    libpoppler-cpp-dev \
-    poppler-utils \
-    tesseract-ocr \
-    qpdf \
- && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y --no-install-recommends \
+#     build-essential \
+#     gcc \
+#     g++ \
+#     libmagic-dev \
+#     libpoppler-cpp-dev \
+#     poppler-utils \
+#     tesseract-ocr \
+#     qpdf \
+#  && rm -rf /var/lib/apt/lists/*
 
 # Copy only requirements.txt first to leverage Docker layer caching
 COPY requirements.txt /app/
