--- a/.github/workflows/fastapi-backend.yaml
+++ b/.github/workflows/fastapi-backend.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'backend/genai.backend.fastapi/**'
+      - 'backend/app/**'
   workflow_dispatch: # allow manual triggering
 
 jobs:
@@ -31,7 +31,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./backend/genai.backend.fastapi
+          context: ./backend/app
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
