--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -23,6 +23,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install uv official binary
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
+# Add uv binaries to PATH for all future layers & runtime
+ENV PATH="$HOME/.local/bin:${PATH}"
+
 # Copy only dependency manifests first (for Docker layer caching)
 COPY pyproject.toml uv.lock ./
 
